# log_analysis

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: build.yml  release.yml
contracts/: parsed-log.schema.json
docs/: developmen_plan.md  mvp-plan.md
log_core/: Cargo.toml
log_core/src/: function_test.rs  install_apboot.rs  lib.rs  model.rs  oba_test.rs  radio_test.rs  txpower_test.rs  verify_tpm_aos.rs
log_core/tests/: function_test_golden.rs
log_core/tests/golden/function_test/: synthetic_pass.json
src/: App.tsx  i18n.ts  index.css  model.ts  privacy.ts  theme.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AiSummaryPanel.tsx  AnomalyList.tsx  DeviceOverview.tsx  ReportDrawer.tsx  ReportList.tsx  SettingsModal.tsx  ShmooPlot.tsx  Toast.tsx  Topbar.tsx
src/hooks/: useAutoUpdater.ts
src/utils/: aggregation.ts
