[package]
name = "log_analysis"
version = "0.1.0"
description = "Production test log parsing and diagnosis"
edition = "2021"

[lib]
name = "log_analysis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
log_core = { path = "../log_core" }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
